Апдейт перед демо
Co-authored-by: veschin <veschindev@gmail.com>
Co-authored-by: oveshchin <oveshchin@phoenixit.ru>

--- a/clojure.org
+++ b/clojure.org
@@ -2,23 +2,31 @@
 
 * Зачем вам это нужно?
 Попробуем ответить на неприятные вопросы:
-- Эта технология даст вам карьерное преимущество здесь и сейчас?
-  Нет
+** Эта технология даст вам карьерное преимущество здесь и сейчас?
+Нет
 
-- Эта технология является популярной? На ней легко найти работу?
-  Нет
+** Эта технология является популярной? На ней легко найти работу?
+Нет
 
-- Зачем вообще тратить на нее свое время?
-  Потому что Clojure способна подарить кардинально новый опыт решения обыденных проблем.
-  Не нужно смотреть на этот язык, как на потенциально новый вид деятельности.
-  Нужно дать ему шанс, существовать в вашей карьере параллельно с основным источником дохода.
+** Зачем вообще тратить на нее свое время?
+Потому что Clojure способна подарить кардинально новый опыт решения обыденных проблем.
+Не нужно смотреть на этот язык, как на потенциально новый вид деятельности.
+Нужно дать ему шанс, существовать в вашей карьере параллельно с основным источником дохода.
+
+
 * Введение
 ** Lisp
 Семейство языков программирования,
 программы и данные в которых представляются системами линейных списков символов.
 #+begin_src lisp
-(CAR '(A B C D))
+(car '(A B C D))
 ;; => A
+
+(write-line "Hello World")
+;; => nil
+
+(* 2 3)
+;; => 6
 #+end_src
 ** Clojure
 Cовременный диалект Лиспа,
@@ -158,6 +166,7 @@ if(true) {
 ;; Или
 #{1 3 2 5 4}
 #+end_src
+
 
 * Козыри пошли
 ** Деструктуризация
@@ -321,7 +330,37 @@ Arrays.asList(5, 8, 3, 1).stream()
      (+ 1)) ;; => 7
 #+end_src
 
+
 * Java
 ** Interop
+#+begin_src clojure
+(.toUpperCase "fred")
+;; => "FRED"
+
+(.getName String)
+;; => "java.lang.String"
+
+(.-x (java.awt.Point. 1 2))
+;; => 1
+
+(System/getProperty "java.vm.version")
+;; => "1.6.0_07-b06-57"
+
+Math/PI
+;; => 3.141592653589793
+#+end_src
 ** Библиотеки
+#+begin_src clojure
+(ns demo
+  (:import (java.util Date Calendar)
+           (java.net URI ServerSocket)
+           java.sql.DriverManager))
+#+end_src
 ** Исключения
+#+begin_src clojure
+(try
+  (/ 1 0)
+  (catch Exception e
+    (.getMessage e))
+  (finally ()))
+#+end_src
