--- a/clojure.org
+++ b/clojure.org
@@ -1,5 +1,18 @@
 #+title: Clojure
 
+* Формат мероприятия
+Не совсем верно называть это воркшопом,
+потому что ~мы не будем программировать~ (но это не точно).
+
+Цель мероприятия, ~познакомить с технологией~.
+Показать, что это не марсианские письмена,
+а такой же ~прагматичный язык программирования~ как и мейнстримные,
+который должен ~решать проблемы бизнеса и помогать разработчику~.
+
+Главная ~проблема~ обучения - ~нежелание обучаемого воспринимать информацию~.
+Главная ~цель~ настоящего обучения - ~развить интерес~ к теме, и ~ответить на~ главные ~вопросы~.
+
+
 * Зачем вам это нужно?
 Попробуем ответить на неприятные вопросы:
 ** Эта технология даст вам карьерное преимущество здесь и сейчас?
@@ -48,6 +61,7 @@ int plus (x, y) {
 	return x + y;
 }
 #+end_src
+
 В Clojure мы делаем почти то же самое, но опускаем тип результата,
 потому что язык динамически типизированный.
 Через функцию* ~defn~ Объявляем:
@@ -166,6 +180,7 @@ if(true) {
 ;; Или
 #{1 3 2 5 4}
 #+end_src
+
 
 
 * Козыри пошли
@@ -331,6 +346,33 @@ Arrays.asList(5, 8, 3, 1).stream()
 #+end_src
 
 
+* Repl
+Чаще всего этой аббревиатурой характеризуется интерактивная среда языка программирования LISP,
+однако такая форма характерна и для интерактивных сред языков
+- Erlang
+- Groovy
+- Haskell
+- Java
+- JavaScript
+- Perl
+- PHP
+- Python
+- Ruby
+- Scala
+- Smalltalk
+- Swift
+- Tcl и других
+
+** R ead
+Функция ~read~ читает одно выражение и преобразует его в соответствующую структуру данных в памяти
+** E val
+Функция ~eval~ принимает одну такую структуру данных и вычисляет соответствующее ей выражение
+** P rint
+Функция ~print~ принимает результат вычисления выражения и печатает его пользователю
+** L oop
+Бесконечный цикл (~loop~), начинается сначала
+
+
 * Java
 ** Interop
 #+begin_src clojure
@@ -363,4 +405,103 @@ Math/PI
   (catch Exception e
     (.getMessage e))
   (finally ()))
+#+end_src
+
+
+
+
+* Послесловие по языку
+** Функциональный
+Поощряется функциональный подход.
+Все имеет результат.
+Можно управлять функциями как значениями.
+Можно композировать функции.
+#+begin_src clojure
+(fn [])
+;; => fn
+
+(defn closure [a]
+  (fn []
+    (a + 10)))
+;; #'user/closure
+
+(closure)
+;; => fn
+
+((closure) 5)
+;; => 15
+
+#+end_src
+** Иммутабельный
+Мы не мутируем (перезаписываем) значение переменной.
+Мы создаем копию или меняем ссылку на объект
+#+begin_src java
+int i = 5;
+i = 6;
+// 6
+#+end_src
+
+#+begin_src clojure
+(def i 5)
+
+(def i* (inc i))
+
+[i i*]
+;; => [5 6]
+#+end_src
+** Структуры персистентные
+Структура данных, как гит репозиторий.
+Хранит значение при инициализации, и шаги воспроизведения.
+Мы редко копируем что-то полностью, чаще мы меняем последние шаги работы со структурой
+Поэтому иммутабельность, стоит дешево.
+#+begin_src clojure
+(def v [1 2])
+
+(def v2 (conj v 3))
+;; [1 2] + 3 = [1 2 3]
+
+(def v3 (conj v2 4))
+;; [1 2] + 3 + 4 = [1 2 3 4]
+
+(def v4 (conj v2 5))
+;; [1 2] + 3 + 5 = [1 2 3 5]
+
+v
+;; => [1 2]
+
+v2
+;; => [1 2 3]
+
+v3
+;; => [1 2 3 4]
+
+v4
+;; => [1 2 3 5]
+#+end_src
+** Data Driven
+#+begin_src clojure
+
+;; ---- MAP
+(def m {:a 10 :b 20})
+;; => #'user/m
+
+(def m+c+d (assoc m :c 30 :d 40))
+;; => {:a 10 :b 20 :c 30 :d 40}
+
+(def m+c-d (dissoc m :d))
+;; => {:a 10 :b 20 :c 30}
+
+;; ---- VEC
+
+(def v [1 2 3 4])
+;; => #'user/v
+
+(def inced (map inc v))
+;; => (2 3 4 5)
+
+;; ---- CODE
+(-> (list 'def 'k 10) ;; => ('def 'k 10)
+    (str) ;; => "(def k 10)"
+    (eval)) ;; => #'user/k
+
 #+end_src
