Апдейт по функциям
Co-authored-by: veschin <veschindev@gmail.com>
Co-authored-by: oveshchin <oveshchin@phoenixit.ru>

--- a/clojure.org
+++ b/clojure.org
@@ -416,6 +416,7 @@ Math/PI
 Все имеет результат.
 Можно управлять функциями как значениями.
 Можно композировать функции.
+
 #+begin_src clojure
 (fn [])
 ;; => fn
@@ -425,13 +426,26 @@ Math/PI
     (a + 10)))
 ;; #'user/closure
 
-(closure)
-;; => fn
+(closure 5)
+;; => (fn [] (5 + 10))
 
-((closure) 5)
+((closure 5))
+;; => 15
+#+end_src
+
+Почему бы нам не сделать словарь функций
+#+begin_src clojure
+(def funcs
+  {:plus5 (fn [a] (+ a 5))
+   :minus10 (fn [b] (- b 10))})
+
+((:plus5 funcs) 10)
 ;; => 15
 
+((:minus10 funcs) 10)
+;; => 0
 #+end_src
+
 ** Иммутабельный
 Мы не мутируем (перезаписываем) значение переменной.
 Мы создаем копию или меняем ссылку на объект
