Апдейт про чистые функции
Co-authored-by: veschin <veschindev@gmail.com>
Co-authored-by: oveshchin <oveshchin@phoenixit.ru>

--- a/clojure.org
+++ b/clojure.org
@@ -417,6 +417,16 @@ Math/PI
 Можно управлять функциями как значениями.
 Можно композировать функции.
 
+Чистая функция - функция, которая ~при одинаковых входных данных~, ~всегда~ дает ~одинаковый результат~
+#+begin_src clojure
+(defn pure [a] (+ a a))
+
+[(pure 2) (pure 2) (pure 2) (pure 2)]
+;; => [4 4 4 4]
+
+#+end_src
+
+Свобода в создании и использовании функций
 #+begin_src clojure
 (fn [])
 ;; => fn
