Мощный апдейт про буфферы
Co-authored-by: veschin <veschindev@gmail.com>
Co-authored-by: oveshchin <oveshchin@phoenixit.ru>

--- a/emacs/w1.org
+++ b/emacs/w1.org
@@ -28,7 +28,40 @@
 -  Автокомплит
 -  Отличный поиск
 -  Расширения
+*** Буфферы
+Текст, который вы редактируете в Emacs, находится в объекте, называемом буфером.
+Каждый раз, когда вы посещаете файл, буфер используется для хранения его текста.
+- *Messages*
+- *scratch*
+*** Org
+https://orgmode.org/features.html
+Формат текста, состоящий из простых, но универсальных форм, которые представляют форматирование и структурную информацию.
+*** Magit
+https://magit.vc/
+Полноценный текстовый пользовательский интерфейс для Git.
+Он заполняет пробел между интерфейсом командной строки Git и различными графическими интерфейсами,
+позволяя вам выполнять как тривиальные,
+так и сложные задачи контроля версий с помощью всего лишь пары нажатий мнемонических клавиш.
+*** LSP
+https://github.com/emacs-lsp/lsp-mode
+Language Server Protocol (LSP) - это открытый протокол на основе JSON-RPC для использования между редакторами исходного кода или интегрированными средами разработки (IDE) и серверами,
+предоставляющими специфические для языка программирования функции,
+такие как завершение кода, подсветка синтаксиса и маркировка предупреждений и ошибок,
+а также процедуры рефакторинга.
 
+Цель протокола - позволить реализовать и распространить поддержку языка программирования
+~независимо от конкретного редактора или IDE~.
+*** Finder
+- Поиск по проекту
+  ~SPC s p~
+- Поиск файла
+  ~SPC SPC~
+- Поиск по буфферу
+  ~SPC s s~
+- Поиск конкретного файла
+  ~SPC f f~
+- Dired
+  ~C-x d~
 
 * Установка
 ** Зависимости [0/4]
