--- a/emacs/w1.org
+++ b/emacs/w1.org
@@ -23,6 +23,8 @@
 | Сообщество                            | Large | Large   | Large         |
 | Популярность                          | High  | High    | High          |
 
+** Отдельный хедер для ветки
+
 ** Фичи
 -  Подстветка синтаксиса
 -  Автокомплит
